gccida/c0/noce_get_alt_condition
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1614:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+50h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1629:13: error: expected identifier or '('
 struct set = pc_set( if_info->jump); 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1633:69: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v4 = *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&set[1] + 24LL) + 8LL) == if_info->jump[4]; 
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1638:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op_b = ( rtx)if_info->cond[1]; 
             ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1639:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev_insn = ( rtx)if_info->cond_earliest[1]; 
                  ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1668:32: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
desired_val.rtwint = ( __int64)target->fld[0]; 
                               ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1706:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& op_b == ( rtx)if_info->cond[1] ) 
                 ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1712:61: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = if_info->jump; insn != *earliest; insn = ( rtx)insn[1] ) 
                                                            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1734:33: error: use of undeclared identifier 'machine_mode'
condb = gen_rtx_fmt_ee( code, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)cond), op_a, op_b); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/ifcvt.c:1734:48: error: expected expression
condb = gen_rtx_fmt_ee( code, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)cond), op_a, op_b); 
                                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_alt_condition/src/obj/ifcvt.o] Error 1
